Finition de la navbar-mobile pour toutes les pages, mais reste encore à améliorer la transition

--- a/Destination/destination-moon.html
+++ b/Destination/destination-moon.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="../navStyle.css" />
+  <link rel="stylesheet" href="./destination.css" />
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body>
+  <header>
+    <a href="../index.html"><img class="logo" src="../assets/shared/logo.svg" alt="Logo du site" /></a>
+    <img class="iconHamburger" id="iconHamburger" src="../assets/shared/icon-hamburger.svg" />
+    <nav class="navNormal">
+      <ul>
+        <li>
+          <a href="../index.html"><span class="numNav">01</span>Home</a>
+        </li>
+        <li>
+          <a href="../Destination/destination-moon.html" class="active"><span class="numNav">02</span>Destination</a>
+        </li>
+        <li>
+          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
+        </li>
+        <li>
+          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
+        </li>
+      </ul>
+    </nav>
+
+    <nav class="navMobile" id="navMobile">
+      <ul>
+        <li>
+          <a href="../index.html"><span class="numNav">01</span>Home</a>
+        </li>
+        <li>
+          <a href="../Destination/destination-moon.html" class="active"><span class="numNav">02</span>Destination</a>
+        </li>
+        <li>
+          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
+        </li>
+        <li>
+          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
   01 Pick your destination
 
@@ -24,8 +59,8 @@
 
   Moon
 
-  See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-  regain perspective and come back refreshed. While you’re there, take in some history 
+  See our planet as you’ve never seen it before. A perfect relaxing trip away to help
+  regain perspective and come back refreshed. While you’re there, take in some history
   by visiting the Luna 2 and Apollo 11 landing sites.
 
   Avg. distance
@@ -34,4 +69,5 @@
   Est. travel time
   3 days
 </body>
+
 </html>
