--- a/index.html
+++ b/index.html
@@ -14,37 +14,37 @@
 <body>
   <header>
     <a href="./index.html"><img class="logo" src="./assets/shared/logo.svg" alt="Logo du site" /></a>
-    <img class="iconHamburger" src="./assets/shared/icon-hamburger.svg" />
+    <img class="iconHamburger" id="iconHamburger" src="./assets/shared/icon-hamburger.svg" />
     <nav class="navNormal">
       <ul>
         <li>
-          <a href="" class="active"><span class="numNav">01</span>Home</a>
+          <a href="./index.html" class="active"><span class="numNav">01</span>Home</a>
         </li>
         <li>
-          <a href=""><span class="numNav">02</span>Destination</a>
+          <a href="../Destination/destination-moon.html"><span class="numNav">02</span>Destination</a>
         </li>
         <li>
-          <a href=""><span class="numNav">03</span>Crew</a>
+          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
         </li>
         <li>
-          <a href=""><span class="numNav">04</span>Technology</a>
+          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
         </li>
       </ul>
     </nav>
 
-    <nav class="navMobile">
+    <nav class="navMobile" id="navMobile">
       <ul>
         <li>
           <a href="" class="active"><span class="numNav">01</span>Home</a>
         </li>
         <li>
-          <a href=""><span class="numNav">02</span>Destination</a>
+          <a href="../Destination/destination-moon.html"><span class="numNav">02</span>Destination</a>
         </li>
         <li>
-          <a href=""><span class="numNav">03</span>Crew</a>
+          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
         </li>
         <li>
-          <a href=""><span class="numNav">04</span>Technology</a>
+          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
         </li>
       </ul>
     </nav>
@@ -54,13 +54,11 @@
       <h5>So, you want to travel</h5>
       <h1>Space</h1>
       <p>
-        Let’s face it; if you want to go to space, you might as well genuinely
-        go to outer space and not hover kind of on the edge of it. Well sit
-        back, and relax because we’ll give you a truly out of this world
-        experience!
+        Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of
+        on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!
       </p>
     </section>
-    <div>
+    <div class="btnExplore">
       <button type="button">
         <a href="./Destination/destination-moon.html">Explore</a>
       </button>
