--- a/Crew/crew-commander.html
+++ b/Crew/crew-commander.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="../navStyle.css" />
+  <link rel="stylesheet" href="./crew.css" />
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body>
+  <header>
+    <a href="../index.html"><img class="logo" src="../assets/shared/logo.svg" alt="Logo du site" /></a>
+    <img class="iconHamburger" id="iconHamburger" src="../assets/shared/icon-hamburger.svg" />
+    <nav class="navNormal">
+      <ul>
+        <li>
+          <a href="../index.html"><span class="numNav">01</span>Home</a>
+        </li>
+        <li>
+          <a href="../Destination/destination-moon.html"><span class="numNav">02</span>Destination</a>
+        </li>
+        <li>
+          <a href="../Crew/crew-commander.html" class="active"><span class="numNav">03</span>Crew</a>
+        </li>
+        <li>
+          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
+        </li>
+      </ul>
+    </nav>
+
+    <nav class="navMobile" id="navMobile">
+      <ul>
+        <li>
+          <a href="../index.html"><span class="numNav">01</span>Home</a>
+        </li>
+        <li>
+          <a href="../Destination/destination-moon.html"><span class="numNav">02</span>Destination</a>
+        </li>
+        <li>
+          <a href="../Crew/crew-commander.html" class="active"><span class="numNav">03</span>Crew</a>
+        </li>
+        <li>
+          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
   02 Meet your crew
 
   Commander
   Douglas Hurley
 
-  Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-  and former NASA astronaut. He launched into space for the third time as 
+  Douglas Gerald Hurley is an American engineer, former Marine Corps pilot
+  and former NASA astronaut. He launched into space for the third time as
   commander of Crew Dragon Demo-2.
+  <script src="../navScript.js"></script>
 </body>
+
 </html>
