--- a/Technologie/technology-vehicle.html
+++ b/Technologie/technology-vehicle.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="../navStyle.css" />
+  <link rel="stylesheet" href="./technology.css" />
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body>
+  <header>
+    <a href="../index.html"><img class="logo" src="../assets/shared/logo.svg" alt="Logo du site" /></a>
+    <img class="iconHamburger" id="iconHamburger" src="../assets/shared/icon-hamburger.svg" />
+    <nav class="navNormal">
+      <ul>
+        <li>
+          <a href="../index.html"><span class="numNav">01</span>Home</a>
+        </li>
+        <li>
+          <a href="../Destination/destination-moon.html"><span class="numNav">02</span>Destination</a>
+        </li>
+        <li>
+          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
+        </li>
+        <li>
+          <a href="../Technologie/technology-vehicle.html" class="active"><span class="numNav">04</span>Technology</a>
+        </li>
+      </ul>
+    </nav>
+
+    <nav class="navMobile" id="navMobile">
+      <ul>
+        <li>
+          <a href="../index.html"><span class="numNav">01</span>Home</a>
+        </li>
+        <li>
+          <a href="../Destination/destination-moon.html"><span class="numNav">02</span>Destination</a>
+        </li>
+        <li>
+          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
+        </li>
+        <li>
+          <a href="../Technologie/technology-vehicle.html" class="active"><span class="numNav">04</span>Technology</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
   03 Space launch 101
 
@@ -24,9 +59,10 @@
   The terminology...
   Launch vehicle
 
-  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-  payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-  WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
+  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a
+  payload from Earth's surface to space, usually to Earth orbit or beyond. Our
+  WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall,
   it's quite an awe-inspiring sight on the launch pad!
 </body>
+
 </html>
