--- a/index.html
+++ b/index.html
@@ -1,68 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./navStyle.css" />
+    <link rel="stylesheet" href="./homeStyle.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./navStyle.css" />
-  <link rel="stylesheet" href="./homeStyle.css" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+    <title>Frontend Mentor | Space tourism website</title>
+  </head>
 
-  <title>Frontend Mentor | Space tourism website</title>
-</head>
+  <body>
+    <header>
+      <a href="./index.html"
+        ><img class="logo" src="./assets/shared/logo.svg" alt="Logo du site"
+      /></a>
+      <img
+        class="iconHamburger"
+        id="iconHamburger"
+        src="./assets/shared/icon-hamburger.svg"
+      />
+      <nav class="navNormal">
+        <ul>
+          <li>
+            <a href="./index.html" class="active"
+              ><span class="numNav">01</span>Home</a
+            >
+          </li>
+          <li>
+            <a href="../Destination/destination-moon.html"
+              ><span class="numNav">02</span>Destination</a
+            >
+          </li>
+          <li>
+            <a href="../Crew/crew-commander.html"
+              ><span class="numNav">03</span>Crew</a
+            >
+          </li>
+          <li>
+            <a href="../Technologie/technology-vehicle.html"
+              ><span class="numNav">04</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
 
-<body>
-  <header>
-    <a href="./index.html"><img class="logo" src="./assets/shared/logo.svg" alt="Logo du site" /></a>
-    <img class="iconHamburger" id="iconHamburger" src="./assets/shared/icon-hamburger.svg" />
-    <nav class="navNormal">
-      <ul>
-        <li>
-          <a href="./index.html" class="active"><span class="numNav">01</span>Home</a>
-        </li>
-        <li>
-          <a href="../Destination/destination-moon.html"><span class="numNav">02</span>Destination</a>
-        </li>
-        <li>
-          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
-        </li>
-        <li>
-          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
-        </li>
-      </ul>
-    </nav>
-
-    <nav class="navMobile" id="navMobile">
-      <ul>
-        <li>
-          <a href="" class="active"><span class="numNav">01</span>Home</a>
-        </li>
-        <li>
-          <a href="../Destination/destination-moon.html"><span class="numNav">02</span>Destination</a>
-        </li>
-        <li>
-          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
-        </li>
-        <li>
-          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h5>So, you want to travel</h5>
-      <h1>Space</h1>
-      <p>
-        Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of
-        on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!
-      </p>
-    </section>
-    <div class="btnExplore">
-        <a href="./Destination/destination-moon.html">Explore</a>
-    </div>
-  </main>
-  <script src="./navScript.js"></script>
-</body>
-
+      <nav class="navMobile" id="navMobile">
+        <ul>
+          <li>
+            <a href="" class="active"><span class="numNav">01</span>Home</a>
+          </li>
+          <li>
+            <a href="../Destination/destination-moon.html"
+              ><span class="numNav">02</span>Destination</a
+            >
+          </li>
+          <li>
+            <a href="../Crew/crew-commander.html"
+              ><span class="numNav">03</span>Crew</a
+            >
+          </li>
+          <li>
+            <a href="../Technologie/technology-vehicle.html"
+              ><span class="numNav">04</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h5>So, you want to travel</h5>
+        <h1>Space</h1>
+        <p>
+          Let’s face it; if you want to go to space, you might as well genuinely
+          go to outer space and not hover kind of on the edge of it. Well sit
+          back, and relax because we’ll give you a truly out of this world
+          experience!
+        </p>
+      </section>
+      <div class="boxExplore">
+        <a href="./Destination/destination-moon.html">
+          <div class="btnExplore">
+            <p>Explore</p>
+          </div>
+        </a>
+      </div>
+    </main>
+    <script src="./navScript.js"></script>
+  </body>
 </html>
