feat : creation de la page Destination en compagnie d'un fichier css pour parcourir ses sous pages

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         id="iconHamburger"
         src="./assets/shared/icon-hamburger.svg"
       />
+      <!--<span class="barHori"></span>-->
       <nav class="navNormal">
         <ul>
           <li>
@@ -84,9 +85,9 @@
           experience!
         </p>
       </section>
-      <div class="boxExplore">
+      <div class="boxBtnExplore">
         <a href="./Destination/destination-moon.html">
-          <div class="btnExplore">
+          <div class="btnHover">
             <p>Explore</p>
           </div>
         </a>
