feat : ajout des styles sur la page crew, reste à gérer la responsivité

--- a/Crew/crew-commander.html
+++ b/Crew/crew-commander.html
@@ -87,24 +87,24 @@
           <div class="commander-box">
             <input
               type="radio"
-              id="moon"
-              value="moon"
-              name="destination"
+              id="commander"
+              value="Commander"
+              name="crew"
               checked
             />
-            <label for="moon">Commander</label>
+            <label for="commander"></label>
           </div>
           <div class="mission-box">
-            <input type="radio" id="mars" value="mars" name="destination" />
-            <label for="mars">Mission Specialist</label>
+            <input type="radio" id="mission" value="Mission" name="crew" />
+            <label for="mission"></label>
           </div>
           <div class="pilot-box">
-            <input type="radio" id="europa" value="europa" name="destination" />
-            <label for="europa">pilot</label>
+            <input type="radio" id="pilot" value="Pilot" name="crew" />
+            <label for="pilot"></label>
           </div>
           <div class="flight-box">
-            <input type="radio" id="titan" value="titan" name="destination" />
-            <label for="titan">Flight</label>
+            <input type="radio" id="flight" value="Flight" name="crew" />
+            <label for="flight"></label>
           </div>
         </div>
       </section>
