--- a/Destination/destination-moon.html
+++ b/Destination/destination-moon.html
@@ -51,8 +51,7 @@
   </header>
   <main>
     <div class="pickTitle-box">
-      <span id="pickTitleSpan">01</span>
-      <h3 id="pickTitle"> Pick your destination</h3>
+      <span id="pickTitleSpan">01</span><h3 id="pickTitle"> Pick your destination</h3>
     </div>
     <section class="img-box">
       <img src="../assets/destination/image-moon.png" />
