feat : add more script to render the crew page dynamic

--- a/Destination/destination-moon.html
+++ b/Destination/destination-moon.html
@@ -1,100 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../navStyle.css" />
+    <link rel="stylesheet" href="./destinationStyle.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../navStyle.css" />
-  <link rel="stylesheet" href="./destinationStyle.css" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <title>Frontend Mentor | Space tourism website</title>
+  </head>
 
-  <title>Frontend Mentor | Space tourism website</title>
-</head>
+  <body>
+    <header>
+      <a href="../index.html"
+        ><img class="logo" src="../assets/shared/logo.svg" alt="Logo du site"
+      /></a>
+      <img
+        class="iconHamburger"
+        id="iconHamburger"
+        src="../assets/shared/icon-hamburger.svg"
+      />
+      <nav class="navNormal">
+        <ul>
+          <li>
+            <a href="../index.html"><span class="numNav">01</span>Home</a>
+          </li>
+          <li>
+            <a href="../Destination/destination-moon.html" class="active"
+              ><span class="numNav">02</span>Destination</a
+            >
+          </li>
+          <li>
+            <a href="../Crew/crew-commander.html"
+              ><span class="numNav">03</span>Crew</a
+            >
+          </li>
+          <li>
+            <a href="../Technologie/technology-vehicle.html"
+              ><span class="numNav">04</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
 
-<body>
-  <header>
-    <a href="../index.html"><img class="logo" src="../assets/shared/logo.svg" alt="Logo du site" /></a>
-    <img class="iconHamburger" id="iconHamburger" src="../assets/shared/icon-hamburger.svg" />
-    <nav class="navNormal">
-      <ul>
-        <li>
-          <a href="../index.html"><span class="numNav">01</span>Home</a>
-        </li>
-        <li>
-          <a href="../Destination/destination-moon.html" class="active"><span class="numNav">02</span>Destination</a>
-        </li>
-        <li>
-          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
-        </li>
-        <li>
-          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
-        </li>
-      </ul>
-    </nav>
-
-    <nav class="navMobile" id="navMobile">
-      <ul>
-        <li>
-          <a href="../index.html"><span class="numNav">01</span>Home</a>
-        </li>
-        <li>
-          <a href="../Destination/destination-moon.html" class="active"><span class="numNav">02</span>Destination</a>
-        </li>
-        <li>
-          <a href="../Crew/crew-commander.html"><span class="numNav">03</span>Crew</a>
-        </li>
-        <li>
-          <a href="../Technologie/technology-vehicle.html"><span class="numNav">04</span>Technology</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div class="pickTitle-box">
-      <span id="pickTitleSpan">01</span><h3 id="pickTitle"> Pick your destination</h3>
-    </div>
-    <section class="img-box">
-      <img src="../assets/destination/image-moon.png" />
-    </section>
-    <section class="detail-box">
-      <div class="destination-box">
-        <div class="moon-box">
-          <input type="radio" id="moon" value="moon" name="destination" checked>
-          <label for="moon">Moon</label>
-        </div>
-        <div class="mars-box">
-          <input type="radio" id="mars" value="mars" name="destination">
-          <label for="mars">Mars</label>
-        </div>
-        <div class="europa-box">
-          <input type="radio" id="europa" value="europa" name="destination">
-          <label for="europa">Europa</label>
-        </div>
-        <div class="titan-box">
-          <input type="radio" id="titan" value="titan" name="destination">
-          <label for="titan">Titan</label>
-        </div>
+      <nav class="navMobile" id="navMobile">
+        <ul>
+          <li>
+            <a href="../index.html"><span class="numNav">01</span>Home</a>
+          </li>
+          <li>
+            <a href="../Destination/destination-moon.html" class="active"
+              ><span class="numNav">02</span>Destination</a
+            >
+          </li>
+          <li>
+            <a href="../Crew/crew-commander.html"
+              ><span class="numNav">03</span>Crew</a
+            >
+          </li>
+          <li>
+            <a href="../Technologie/technology-vehicle.html"
+              ><span class="numNav">04</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="pickTitle-box">
+        <span id="pickTitleSpan">01</span>
+        <h3 id="pickTitle">Pick your destination</h3>
       </div>
-      <h2 id="principalTitle">Moon</h2>
-      <div class="text-destination">
-        <p>See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and
-          come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing
-          sites.</p>
-      </div>
-      <div class="duree-box">
-        <div class="distance">
-          <h5>Avg. Distance</h5>
-          <h4>384,400 km</h4>
+      <section class="img-box">
+        <img src="../assets/destination/image-moon.png" />
+      </section>
+      <section class="detail-box">
+        <div class="destination-box">
+          <div class="moon-box">
+            <input
+              type="radio"
+              id="moon"
+              value="moon"
+              name="destination"
+              checked
+            />
+            <label for="moon">Moon</label>
+          </div>
+          <div class="mars-box">
+            <input type="radio" id="mars" value="mars" name="destination" />
+            <label for="mars">Mars</label>
+          </div>
+          <div class="europa-box">
+            <input type="radio" id="europa" value="europa" name="destination" />
+            <label for="europa">Europa</label>
+          </div>
+          <div class="titan-box">
+            <input type="radio" id="titan" value="titan" name="destination" />
+            <label for="titan">Titan</label>
+          </div>
         </div>
-        <div class="temps">
-          <h5>Est. travel time</h5>
-          <h4>3 days</h4>
+        <h2 id="principalTitle">Moon</h2>
+        <div class="text-destination">
+          <p>
+            See our planet as you’ve never seen it before. A perfect relaxing
+            trip away to help regain perspective and come back refreshed. While
+            you’re there, take in some history by visiting the Luna 2 and Apollo
+            11 landing sites.
+          </p>
         </div>
-      </div>
-    </section>
-  </main>
-  <script src="../app.js"></script>
-  <script src="../navScript.js"></script>
-</body>
-
+        <div class="duree-box">
+          <div class="distance">
+            <h5>Avg. Distance</h5>
+            <h4>384,400 km</h4>
+          </div>
+          <div class="temps">
+            <h5>Est. travel time</h5>
+            <h4>3 days</h4>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="./destination.js"></script>
+    <script src="../navScript.js"></script>
+  </body>
 </html>
