feat : made the page dynamic by fetch the data from data?json file

--- a/Crew/crew-commander.html
+++ b/Crew/crew-commander.html
@@ -116,6 +116,6 @@
       </section>
     </main>
     <script src="../navScript.js"></script>
-    <script async="false" defer src="./crew.js"></script>
+    <script async src="./crew.js"></script>
   </body>
 </html>
