fix: fully responsivity to the Crew Page

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             >
           </li>
           <li>
-            <a href="../Destination/destination-moon.html"
+            <a href="./Destination/destination-moon.html"
               ><span class="numNav">02</span>Destination</a
             >
           </li>
           <li>
-            <a href="../Crew/crew-commander.html"
+            <a href="./Crew/crew-commander.html"
               ><span class="numNav">03</span>Crew</a
             >
           </li>
           <li>
-            <a href="../Technologie/technology-vehicle.html"
+            <a href="./Technologie/technology-vehicle.html"
               ><span class="numNav">04</span>Technology</a
             >
           </li>
@@ -57,17 +57,17 @@
             <a href="" class="active"><span class="numNav">01</span>Home</a>
           </li>
           <li>
-            <a href="../Destination/destination-moon.html"
+            <a href="./Destination/destination-moon.html"
               ><span class="numNav">02</span>Destination</a
             >
           </li>
           <li>
-            <a href="../Crew/crew-commander.html"
+            <a href="./Crew/crew-commander.html"
               ><span class="numNav">03</span>Crew</a
             >
           </li>
           <li>
-            <a href="../Technologie/technology-vehicle.html"
+            <a href="./Technologie/technology-vehicle.html"
               ><span class="numNav">04</span>Technology</a
             >
           </li>
