feat : generate all data for the Crew Page dinamicaly

--- a/Crew/crew-commander.html
+++ b/Crew/crew-commander.html
@@ -78,11 +78,7 @@
       <section class="detail-box">
         <h4>Commander</h4>
         <h2>Douglas Hurley</h2>
-        <p class="text-crew">
-          Douglas Gerald Hurley is an American engineer, former Marine Corps
-          pilot and former NASA astronaut. He launched into space for the third
-          time as commander of Crew Dragon Demo-2.
-        </p>
+        <p class="text-crew"></p>
         <div class="crew-box">
           <div class="commander-box">
             <input
@@ -108,12 +104,7 @@
           </div>
         </div>
       </section>
-      <section class="img-box">
-        <img
-          src="../assets/crew/image-douglas-hurley.png"
-          alt="Image du Commander"
-        />
-      </section>
+      <section class="img-box"></section>
     </main>
     <script src="../navScript.js"></script>
     <script async src="./crew.js"></script>
