feat : rendu les btn radio automatique sur la page destination

--- a/Destination/destination-moon.html
+++ b/Destination/destination-moon.html
@@ -76,9 +76,7 @@
         <span id="pickTitleSpan">01</span>
         <h3 id="pickTitle">Pick your destination</h3>
       </div>
-      <section class="img-box">
-        <img src="../assets/destination/image-moon.png" />
-      </section>
+      <section class="img-box"></section>
       <section class="detail-box">
         <div class="destination-box">
           <div class="moon-box">
@@ -104,23 +102,18 @@
             <label for="titan">Titan</label>
           </div>
         </div>
-        <h2 id="principalTitle">Moon</h2>
+        <h2 id="principalTitle"></h2>
         <div class="text-destination">
-          <p>
-            See our planet as you’ve never seen it before. A perfect relaxing
-            trip away to help regain perspective and come back refreshed. While
-            you’re there, take in some history by visiting the Luna 2 and Apollo
-            11 landing sites.
-          </p>
+          <p></p>
         </div>
         <div class="duree-box">
           <div class="distance">
             <h5>Avg. Distance</h5>
-            <h4>384,400 km</h4>
+            <h4></h4>
           </div>
           <div class="temps">
             <h5>Est. travel time</h5>
-            <h4>3 days</h4>
+            <h4></h4>
           </div>
         </div>
       </section>
