feat : added alt attribute to improve page accessibility

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         class="iconHamburger"
         id="iconHamburger"
         src="./assets/shared/icon-hamburger.svg"
+        alt="menu icon"
       />
       <!--<span class="barHori"></span>-->
       <nav class="navNormal">
