--- a/Crew/crew-commander.html
+++ b/Crew/crew-commander.html
@@ -23,6 +23,7 @@
         class="iconHamburger"
         id="iconHamburger"
         src="../assets/shared/icon-hamburger.svg"
+        alt="menu icon"
       />
       <nav class="navNormal">
         <ul>
