feat : add a meta description to improve page accessibility

--- a/Destination/destination-moon.html
+++ b/Destination/destination-moon.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore outer space and discover cosmic wonders with our immersive simulation site."
+    />
     <link rel="stylesheet" href="../navStyle.css" />
     <link rel="stylesheet" href="./destinationStyle.css" />
     <link
