--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore outer space and discover cosmic wonders with our immersive simulation site."
+    />
     <link rel="stylesheet" href="./navStyle.css" />
     <link rel="stylesheet" href="./homeStyle.css" />
     <link
@@ -55,7 +59,9 @@
       <nav class="navMobile" id="navMobile">
         <ul>
           <li>
-            <a href="" class="active"><span class="numNav">01</span>Home</a>
+            <a href="./index.html" class="active"
+              ><span class="numNav">01</span>Home</a
+            >
           </li>
           <li>
             <a href="./Destination/destination-moon.html"
